src/objects/Batch_Log__c.object
<CustomObject>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status_Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Batch_Log</label>
    <nameField>
        <displayFormat>BL-{0000000000}</displayFormat>
        <label>Nom de Batch_Logs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>